# bgdb

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
extract/: Cargo.toml
extract/src/: images.rs  main.rs  meta.rs  osz.rs
hasher/: Cargo.toml
hasher/src/: main.rs
static/css/: styles.css
static/templates/: index.html.hbs  search.html.hbs
web/: Cargo.toml
web/conf/: default.conf
web/src/: hash.rs  index.rs  main.rs  models.rs  router.rs  schema.rs  search.rs  template.rs
web/static/css/: styles.css
web/static/templates/: index.html.hbs  search.html.hbs
web/templates/: index.html  search.html
