[package]
name = "extract"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
osu-file-parser = "1.1.0"
rayon = "1.10.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
zip = "2.1.3"
