[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
image_hasher = "2.0.0"
rayon = "1.10.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
zip = "2.1.3"

[build-dependencies]
syn = "1"
