[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = "1.0.203"
url-escape = "0.1.1"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.13.0"
image_hasher = "2.0.0"
image = "0.25.1"

[build-dependencies]
syn = "1"
